# blue-scout-public

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  package-lock.json  package.json  rustc-ice-2025-04-09T23_46_07-382.txt  rustc-ice-2025-04-09T23_46_22-481.txt  rustfmt.toml  scouting_data.db.wal  tailwind.config.js
.cargo/: config.toml
blue_scout_macros/: Cargo.toml
blue_scout_macros/src/: json.rs  lib.rs
embed/: theme.js
output/: main.css
public/: home.js  navigation.js  tailwind.css  viewdata_page.js
public/tablefilter/: tablefilter.js
src/: api.rs  app.rs  data.rs  db.rs  error.rs  lib.rs  main.rs  tablefilterjs.rs
src/components/: dock.rs  fallback_page.rs  home_page.rs  mod.rs  settings_page.rs  viewdata_page.rs
style/: main.css  tailwind.css
tbaapi/: Cargo.toml  api_v3.json  gen_schema.sh  get_api_schema.py
tbaapi/src/apis/: configuration.rs  default_api.rs  district_api.rs  event_api.rs  insight_api.rs  list_api.rs  match_api.rs  mod.rs  regional_advancement_api.rs  tba_api.rs  team_api.rs
tbaapi/src/models/: api_status.rs  api_status_app_version.rs  award.rs  award_recipient.rs  district_advancement.rs  district_list.rs  district_ranking.rs  district_ranking_event_points_inner.rs  elimination_alliance.rs  elimination_alliance_backup.rs  elimination_alliance_status.rs  event.rs  event_district_points.rs  event_district_points_points_value.rs  event_district_points_tiebreakers_value.rs  event_insights.rs  event_insights_2016.rs  event_insights_2017.rs  event_insights_2018.rs  event_oprs.rs  event_ranking.rs  event_ranking_extra_stats_info_inner.rs  event_ranking_rankings_inner.rs  event_ranking_sort_order_info_inner.rs  event_simple.rs  get_status_401_response.rs  get_team_events_statuses_by_year_200_response_value.rs  history.rs  leaderboard_insight.rs  leaderboard_insight_data.rs  leaderboard_insight_data_rankings_inner.rs  match_alliance.rs  match_score_breakdown.rs  match_score_breakdown_2015.rs  match_score_breakdown_2015_alliance.rs  match_score_breakdown_2016.rs  match_score_breakdown_2016_alliance.rs  match_score_breakdown_2017.rs  match_score_breakdown_2017_alliance.rs  match_score_breakdown_2018.rs  (+48 more)
